# mapathon-ai

./: .gitignore  README.md  compose.yaml  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  config.py.bak-before-rate-limit  main.py
backend/app/agents/: dependencies.py  map_agent.py  map_agent.py.bak.20260712-213356  prompts.py
backend/app/api/: dependencies.py
backend/app/api/v1/: health.py  neshan.py  places.py  query.py  query.py.bak.20260712-004014  routing_dev.py
backend/app/clients/neshan/: client.py  exceptions.py  places.py  routing.py
backend/app/core/: exception_handlers.py  rate_limit.py
backend/app/schemas/: geo.py  query.py
backend/app/services/: geo_utils.py  neshan_normalizer.py  place_application.py  place_normalizer.py  polyline_decoder.py  routing_application.py
backend/mapathon_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: smoke_routing.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/app/: layout.tsx
frontend/app/about/: page.tsx
frontend/backup-before-vite-integration-20260711-230717/app/: globals.css  page.tsx
frontend/backup-before-vite-integration-20260711-230717/components/: MapView.tsx
frontend/components/: MapWorkspace.tsx
frontend/src/: App.jsx  index.css  main.jsx  mapathon.css  vite-env.d.ts
frontend/src/components/: AboutPage.css  AboutPage.jsx  MapView.tsx  MapWorkspace.tsx
frontend/src/lib/: types.ts
(+1 files in other folders)
