[project]
name = "mapathon-backend"
version = "0.1.0"
description = "Natural language geospatial agent powered by Pydantic AI and Neshan APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pydantic-ai>=1,<2",
    "httpx>=0.28,<1",
    "python-dotenv>=1.0,<2",
    "orjson>=3.10,<4",
    "tenacity>=9,<10",
    "polyline>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-httpx>=0.35,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
